--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
             <h2>Large Pizza</h2>
             <img class="image" src="pizza3.png" alt="Marghareta">
             <div><h3>R 139-00  </h3> </div>
-            <p>You might never feel hungry again!</p>
+            <p >You might never feel hungry again!</p>
         </section>
     </section>
     <section class="contact-details">
         <h2>Contact details:</h2>
         <h3>Contact us at 082 555 5925</h3>
         <h3>email: orders@perfect-pizza.co.za</h3>
+        <div class="address">
+        <h3>2 Anthos Centre</h3>
+        </div>
         </section>
     </section>
 </body>
